<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blank"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ui.owner.search.Owner_IdAuthFragment" >

    <!-- 1. Answer questions -->

    <Button
        android:id="@+id/owner_IdAuthQuetionsBackButton"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/back"
        android:textSize="10sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/owner_IdAuthQuetionsSubmitButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/submit"
        android:textSize="15sp"
        android:typeface="serif" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/owner_IdAuthQuetions_1TextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/owner_IdAuthQuetions_3TextView"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/owner_questions_1"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/owner_IdAuthQuetions_1EditText"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@drawable/input"
            android:ems="10"
            android:singleLine="true" />

        <TextView
            android:id="@+id/owner_IdAuthQuetions_4TextView"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/owner_questions_2"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/owner_IdAuthQuetions_2EditText"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@drawable/input"
            android:ems="10"
            android:singleLine="true" />

        <TextView
            android:id="@+id/owner_IdAuthQuetions_5TextView"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/owner_questions_3"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/owner_IdAuthQuetions_3EditText"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@drawable/input"
            android:ems="10"
            android:singleLine="true" />
    </LinearLayout>

    <TextView
        android:id="@+id/owner_IdAuthQuetions_1TextView"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/owner_IdAuthQuetions_2TextView"
        android:gravity="center"
        android:text="@string/owner_questions"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/owner_IdAuthQuetions_2TextView"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/owner_IdAuthQuetions_1TextView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="49dp"
        android:gravity="center"
        android:text="@string/founder_questions_2"
        android:textSize="15sp" />

</RelativeLayout>