<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ui.finder.upload.Finder_EventCompleteActivity"
    android:background="@drawable/eventcomplete" >
    
    <TextView 
         android:id="@+id/founder_eventComplete_1TextView"
         android:layout_width="fill_parent"
         android:layout_height="40dp"
 	     android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="100dp"
         android:layout_marginLeft="0dp"
         android:textSize="25sp"
         android:gravity="center"
         android:text="@string/founder_eventComplete_1"
         android:textStyle="bold"/>

   <TextView
       android:id="@+id/founder_eventComplete_2TextView"
       android:layout_width="fill_parent"
       android:layout_height="30dp"
       android:layout_alignParentBottom="true"
       android:layout_alignParentLeft="true"
       android:layout_marginBottom="70dp"
       android:layout_marginLeft="0dp"
       android:text="@string/founder_eventComplete_2"
       android:textSize="10sp"
       android:gravity="center" />
   <Button
        android:id="@+id/founder_myprofile_6Button"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/myprofile"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/myProfile"
        android:textSize="8sp"
        android:typeface="serif" />
</RelativeLayout>
