<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/createanevent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ui.shared.CreateEventActivity" >

    <Button
        android:id="@+id/iFound_3Button"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="35dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/iFound"
        android:textSize="12sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/iLost_3Button"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="190dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/iLost"
        android:textSize="12sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/myprofile_3Button"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/myprofile"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/myProfile"
        android:textSize="8sp"
        android:typeface="serif" />

    <FrameLayout
        android:id="@+id/eventcontent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </FrameLayout>

</RelativeLayout>