<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ui.owner.Owner_IdAuthFailFragment"
    android:background="@drawable/testfail" >
    
    <!-- Next & Back Buttons -->

    <Button
        android:id="@+id/owner_IdAuthFailmyProfileButton"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/myprofile"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/myProfile"
        android:textSize="10sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/owner_IdAuthFailTextView1"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/owner_fail_1"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/owner_IdAuthFailTextView2"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/owner_IdAuthFailTextView1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/owner_fail_2"
        android:textSize="15sp" />

    <Button
        android:id="@+id/owner_IdAuthFailRequstButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/owner_IdAuthFailTextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="Request another test"
        android:textSize="10sp"
        android:typeface="serif" />

</RelativeLayout>
