<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ui.finder.upload.Finder_Upload_2Fragment"
    android:background="@drawable/blank_3" >
    
    <!-- 1. Next & Back Buttons -->
    
    <Button
        android:id="@+id/founder_Upload_2Submit_5Button"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="17dp"
        android:layout_marginRight="17dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/submit"
        android:textSize="10sp"
        android:typeface="serif" />
    
    <!-- 2. Take photos -->
    <TextView
       android:id="@+id/founder_Upload_2PhotosTextView"
       android:layout_width="fill_parent"
       android:layout_height="30dp"
       android:layout_alignParentTop="true"
       android:layout_alignParentLeft="true"
       android:layout_marginTop="50dp"
       android:layout_marginLeft="0dp"
       android:gravity="center"
       android:text="@string/founder_photos"
       android:textSize="15sp" />

    <ImageView
        android:id="@+id/founder_Upload_2PhotosimageView1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/uploadpicture" />
    
    <ImageView
        android:id="@+id/founder_Upload_2PhotosimageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="120dp"
        android:layout_marginRight="10dp"
        
        android:src="@drawable/uploadpicture" />

    <Button
        android:id="@+id/founder_Upload_Photos1_5Button"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="240dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/myprofile"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/founder_upload"
        android:textSize="10sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/founder_Upload_Photos2_5Button"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="240dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/myprofile"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/founder_upload"
        android:textSize="10sp"
        android:typeface="serif" />
    
</RelativeLayout>
